Prevent cut off of search bar text

--- a/modules/viewer/css/livingstone-manuscript-viewer.css
+++ b/modules/viewer/css/livingstone-manuscript-viewer.css
@@ -392,7 +392,7 @@ body.loading .loading-modal {
   -moz-border-radius: 7px;
   border-radius: 7px;
   background: url('../images/search-button.png') no-repeat 1px 1px white;
-  padding: 5px 15px 5px 35px;
+  padding: 5px 10px 5px 35px;
   margin: 4px;
   border: 1px solid #d0d0d0;
   height: 25px;
