--- a/modules/viewer/less/_toolbar.less
+++ b/modules/viewer/less/_toolbar.less
@@ -88,7 +88,7 @@
       .box-sizing;
       .border-radius(7px);
       background: url('@{images}/search-button.png') no-repeat 1px 1px white;
-      padding: 5px 15px 5px 35px;
+      padding: 5px 10px 5px 35px;
       margin: @icon-margin;
       border: 1px solid #d0d0d0;
       height: @icon-height;
